# auto-battle-1

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  clippy.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: codebase-pattern-finder.md  thoughts-locator.md
.claude/commands/: commit.md  commit_and_push.md  create_handoff.md  create_plan.md  create_plan_with_pr.md  create_tickets.md  implement_plan.md  implement_plan_with_team.md  iterate_plan.md  ready_pr.md  research_codebase.md  resume_handoff.md
scripts/: spec_metadata.sh
src/: building.rs  lib.rs  main.rs  prelude.rs  testing.rs  ui_camera.rs
src/battlefield/: camera.rs  mod.rs  renderer.rs
src/components/: cleanup.rs  mod.rs
src/dev_tools/: mod.rs
src/game/: mod.rs
src/gameplay/: ai.rs  endgame.rs  endgame_detection.rs  mod.rs  spatial_hash.rs
src/gameplay/battlefield/: camera.rs  mod.rs  renderer.rs
src/gameplay/building/: mod.rs  placement.rs  production.rs
src/gameplay/combat/: attack.rs  death.rs  health_bar.rs  mod.rs
src/gameplay/economy/: income.rs  mod.rs  shop.rs  shop_ui.rs  ui.rs
src/gameplay/hud/: bottom_bar.rs  elapsed_time.rs  mod.rs
src/gameplay/units/: ai.rs  mod.rs  movement.rs  spawn.rs  (+1 more)
src/menus/: endgame.rs  main_menu.rs  mod.rs  pause.rs
src/resources/: mod.rs
src/screens/: in_game.rs  loading.rs  main_menu.rs  mod.rs  paused.rs
src/systems/: cleanup.rs  mod.rs
src/theme/: interaction.rs  mod.rs  palette.rs  widget.rs
src/ui/: mod.rs
tests/: e2e.rs  integration.rs
tests/integration/: state_transitions.rs
(+55 files in other folders)
